// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemSetItem produces output containing ReactElement children 1`] = `
[
  <div
    aria-describedby="DndDescribedBy-0"
    aria-disabled={true}
    aria-roledescription="draggable"
    className="MuiBox-root css-1frel66"
    id="page1.para1"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      id="item1"
      style={{}}
    >
      where are you?
    </div>
  </div>,
  <div
    id="DndDescribedBy-0"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`ItemSetItem produces output containing ReactElement children if draggable 1`] = `
[
  <div
    aria-describedby="DndDescribedBy-1"
    aria-disabled={false}
    aria-roledescription="draggable"
    className="MuiBox-root css-qls7rp"
    id="page1.para1"
    onClick={[Function]}
    onPointerDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      id="item1"
      style={{}}
    >
      where are you?
    </div>
  </div>,
  <div
    id="DndDescribedBy-1"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`ItemSetItem produces output containing ReactElement children is draggable is a false value object 1`] = `
[
  <div
    aria-describedby="DndDescribedBy-2"
    aria-disabled={true}
    aria-roledescription="draggable"
    className="MuiBox-root css-qls7rp"
    id="page1.para1"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      id="item1"
      style={{}}
    >
      where are you?
    </div>
  </div>,
  <div
    id="DndDescribedBy-2"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-2"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;
